--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sidebar-avatar: /img/avatar_m.jpg     # use absolute URL, seeing it's used in bo
 
 # SNS settings
 RSS: false
-weibo_username:     傅立叶大师
+weibo_username:     15162121528
 zhihu_username:     Mr.Curiosity
 github_username:    ssssssu
 #twitter_username:   
