--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/avatar_m.jpg     # use absolute URL, seeing it's used in bo
 # SNS settings
 RSS: false
 weibo_username:     15162121528
-zhihu_username:     Mr.Curiosity
+zhihu_username:     word-25
 github_username:    ssssssu
 #twitter_username:   
 
