--- a/_config.yml
+++ b/_config.yml
@@ -97,16 +97,13 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "百度",
+        href: "http://www.baidu.com"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "正元地球物理",
+        href: "http://www.zydqwl.com/"
     },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "cumt",
+        href: "http://www.cumt.edu.cn/"
     }
 ]
