留言相对路径

--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ gitalk:
   repo: ssssssu.github.io    #仓库名称
   owner: ssssssu    #github用户名
   admin: ssssssu
+  id: window.location.pathname
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
